--- a/other.html
+++ b/other.html
@@ -17,7 +17,7 @@
           <li><a href="kniv.html">Knivset</a></li>
           <li><a href="other.html">Övrigt</a></li>
         </ul>
-        <div class="contact-btn"><a href="contact.html">Kontakt</a>
+        <div class="contact-btn"><a href="index.html">Kontakt</a>
         </div>
       </nav></header>
 
