--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <li><a href="kniv.html">Knivset</a></li>
           <li><a href="other.html">Övrigt</a></li>
         </ul>
-        <div class="contact-btn"><a href="contact.html">Kontakt</a>
-        </div>
+        <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
+        </div> -->
       </nav></header>
       
         <footer>
