--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         </div> -->
       </nav></header>
       
-        <footer>
-          <H3>Kontakt</H3>
-          <H3>mail: mail@mail.com</H3>
-          <H3>phone: xxxxx xxxxxx</H3>
+        <footer class="contact">
+          <div>
+          <H3>Kontakt</H3></div>
+        <div><H3>mail: rolfhenningsson48@gmail.com</H3></div>
+      <div><H3>phone: +46/703689995</H3></div>
         </footer>
   </body>
 </html>
