--- a/other.html
+++ b/other.html
@@ -13,22 +13,19 @@
       <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning.</p>
       <nav>
         <ul>
-          <li><a href="index.html">Start</a></li>
+          <li><a href="index.html">Kontakt</a></li>
           <li><a href="kniv.html">Knivset</a></li>
           <li><a href="other.html">Övrigt</a></li>
         </ul>
-        <div class="contact-btn"><a href="index.html">Kontakt</a>
-        </div>
+        <!-- <div class="contact-btn"><a href="index.html">Kontakt</a>
+        </div> -->
       </nav></header>
 
     <div class="gallery">
      
       <figure class="gallery-item">
-        <img class="thumbnail" src="hyvel.jpg">
-      </figure>     
-      <figure class="gallery-item">
-        <img class="thumbnail" src="kniv.n.JPG">
-      </figure>  
+        <img class="thumbnail" src="hyvel.jpg" alt="hyvel"><h3>Hyvel</h3>
+      </figure>       
       <figure class="gallery-item">
         <img class="thumbnail" src="wood.jpg">
       </figure> 
