--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
 <body class="Indexbody">
     <header class="indexHeader">
       <h1 class="page-title">HANTVERK</h1>
-      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning.</p>
+      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. För mer information om beställningar kontakta Rolf.</p>
       <nav>
         <ul>
-          <li><a href="index.html">Start</a></li>
+          <li><a href="index.html">Kontakt</a></li>
           <li><a href="kniv.html">Knivset</a></li>
-          <li><a href="other.html">Övrigt</a></li>
+          <li><a href="other.html">Övrig Slöjd</a></li>
         </ul>
         <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
         </div> -->
       </nav></header>
       
-        <footer class="contact">
-          <div>
-          <H3>Kontakt</H3></div>
-        <div><H3>mail: rolfhenningsson48@gmail.com</H3></div>
-      <div><H3>phone: +46/703689995</H3></div>
+        <footer>
+          <div class="contact">Kontakt</div>
+        <div class="contact">mail: rolfhenningsson48@gmail.com</div>
+      <div class="contact">phone: 0703689995</div>
         </footer>
   </body>
 </html>
