--- a/kniv.html
+++ b/kniv.html
@@ -12,12 +12,12 @@
       <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning.</p>
       <nav>
         <ul>
-          <li><a href="index.html">Start</a></li>
+          <li><a href="index.html">Kontakt</a></li>
           <li><a href="kniv.html">Knivset</a></li>
-          <li><a href="other.html">Övrigt</a></li>
+          <li><a href="other.html">Övrig Slöjd</a></li>
         </ul>
-        <div class="contact-btn"><a href="index.html">Kontakt</a>
-        </div>
+        <!-- <div class="contact-btn"><a href="index.html">Kontakt</a>
+        </div> -->
       </nav>
     </header>
 
@@ -100,12 +100,12 @@
 
       <nav>
       <ul>
-        <li><a href="index.html">Start</a></li>
+        <li><a href="index.html">Kontakt</a></li>
         <li><a href="kniv.html">knivset</a></li>
-        <li><a href="other.html">Övrigt</a></li>
+        <li><a href="other.html">Övrig Slöjd</a></li>
       </ul>
-      <div class="contact-btn"><a href="contact.html">Kontakt</a>
-      </div>
+      <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
+      </div> -->
     </nav>
   </body>
 </html>
