--- a/other.html
+++ b/other.html
@@ -10,12 +10,12 @@
 <body>
     <header>
       <h1 class="page-title">HANTVERK</h1>
-      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning.</p>
+      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. Beskriv bakgrund eller information som du vill ha här! </p>
       <nav>
         <ul>
           <li><a href="index.html">Kontakt</a></li>
           <li><a href="kniv.html">Knivset</a></li>
-          <li><a href="other.html">Övrigt</a></li>
+          <li><a href="other.html">Övrig Slöjd</a></li>
         </ul>
         <!-- <div class="contact-btn"><a href="index.html">Kontakt</a>
         </div> -->
@@ -23,28 +23,28 @@
 
     <div class="gallery">
      
-      <figure class="gallery-item">
-        <img class="thumbnail" src="hyvel.jpg" alt="hyvel"><h3>Hyvel</h3>
+      <figure class="gallery-item">Namn
+        <img class="thumbnail" src="hyvel.jpg" alt="hyvel">Pris
       </figure>       
-      <figure class="gallery-item">
-        <img class="thumbnail" src="wood.jpg">
+      <figure class="gallery-item">Namn
+        <img class="thumbnail" src="wood.jpg">Pris
       </figure> 
-      <figure class="gallery-item">
-        <img class="thumbnail" src="wood.a.jpg">
+      <figure class="gallery-item">Namn
+        <img class="thumbnail" src="wood.a.jpg">Pris
       </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="wood.b.jpg">
+      <figure class="gallery-item">Namn
+        <img class="thumbnail" src="wood.b.jpg">Pris
       </figure>
       </div>
 
       <nav>
       <ul>
-        <li><a href="index.html">Start</a></li>
+        <li><a href="index.html">Kontakt</a></li>
         <li><a href="kniv.html">Knivset</a></li>
-        <li><a href="other.html">Övrigt</a></li>
+        <li><a href="other.html">Övrig Slöjd</a></li>
       </ul>
-      <div class="contact-btn"><a href="contact.html">Kontakt</a>
-      </div>
+      <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
+      </div> -->
     </nav>
   </body>
 </html>
