--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="Indexbody">
     <header class="indexHeader">
       <h1 class="page-title">HANTVERK</h1>
-      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. För mer information om beställningar kontakta Rolf.</p>
+      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. För mer information och beställningar kontakta Rolf.</p>
       <nav>
         <ul>
           <li><a href="index.html">Kontakt</a></li>
@@ -22,9 +22,18 @@
       </nav></header>
       
         <footer>
+          <div class="contactFading">
           <div class="contact">Kontakt</div>
         <div class="contact">mail: rolfhenningsson48@gmail.com</div>
-      <div class="contact">phone: 0703689995</div>
+      <div class="contact">tel: 0703689995</div>
+      <div class="contact">Gör så här:</div>
+    <ul class="contact">
+    <li>Skriv namn och antal produkter du vill beställa</li> 
+    <li>Skriv önskad leveransadress</li>
+    <li>Betala via swish när du får bekräftelse</li>
+  </ul>
+  
+  </div>
         </footer>
   </body>
 </html>
