--- a/other.html
+++ b/other.html
@@ -10,7 +10,7 @@
 <body>
     <header>
       <h1 class="page-title">HANTVERK</h1>
-      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. Beskriv bakgrund eller information som du vill ha här! </p>
+      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. För beställningar kontakta Rolf.</p>
       <nav>
         <ul>
           <li><a href="index.html">Kontakt</a></li>
@@ -24,16 +24,25 @@
     <div class="gallery">
      
       <figure class="gallery-item">Namn
-        <img class="thumbnail" src="hyvel.jpg" alt="hyvel">Pris
+        <img class="thumbnail" src="wood.e.jpg" alt="hyvel och kniv">110 kr
       </figure>       
       <figure class="gallery-item">Namn
-        <img class="thumbnail" src="wood.jpg">Pris
+        <img class="thumbnail" src="wood.f.jpg">80 kr paret
       </figure> 
       <figure class="gallery-item">Namn
-        <img class="thumbnail" src="wood.a.jpg">Pris
+        <img class="thumbnail" src="wood.h.jpg">200 kr
       </figure>
       <figure class="gallery-item">Namn
-        <img class="thumbnail" src="wood.b.jpg">Pris
+        <img class="thumbnail" src="wood.i.jpg">150 kr
+      </figure>
+      <figure class="gallery-item">Namn
+        <img class="thumbnail" src="wood.j.jpg">100 kr
+      </figure>
+      <figure class="gallery-item">Namn
+        <img class="thumbnail" src="wood.c.jpg">100 kr
+      </figure>
+      <figure class="gallery-item">Namn
+        <img class="thumbnail" src="wood.d.jpg">100 kr
       </figure>
       </div>
 
