--- a/kniv.html
+++ b/kniv.html
@@ -9,7 +9,9 @@
 <body>
     <header>
       <h1 class="page-title">HANTVERK</h1>
-      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning.</p>
+      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. Alla produkter 
+        är framtagna av noggrant utvalda material.
+      </p>
       <nav>
         <ul>
           <li><a href="index.html">Kontakt</a></li>
