new products and prices

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Kontakt</a></li>
-          <li><a href="kniv.html">Knivset</a></li>
+          <li><a href="kniv.html">KNIVAR</a></li>
           <li><a href="other.html">Övrig Slöjd</a></li>
         </ul>
         <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
@@ -28,9 +28,9 @@
       <div class="contact">tel: 0703689995</div>
       <div class="contact">Gör så här:</div>
     <ul class="contact">
-    <li>Skriv namn och antal produkter du vill beställa</li> 
+    <li>Skriv namn och antal produkter du vill beställa.</li> 
     <li>Skriv önskad leveransadress</li>
-    <li>Betala via swish när du får bekräftelse</li>
+    <li>Betala via swish när du får bekräftelse. Obs Fraktavgift tillkommer.</li>
   </ul>
   
   </div>
