--- a/other.html
+++ b/other.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Kontakt</a></li>
-          <li><a href="kniv.html">Knivset</a></li>
+          <li><a href="kniv.html">KNIVAR</a></li>
           <li><a href="other.html">Övrig Slöjd</a></li>
         </ul>
         <!-- <div class="contact-btn"><a href="index.html">Kontakt</a>
@@ -23,25 +23,28 @@
 
     <div class="gallery">
      
-      <figure class="gallery-item">Namn
+      <figure class="gallery-item">Gungfår
+        <img class="thumbnail" src="gunga.jpg" alt="gungfår">1400 kr/ beställningsvara
+      </figure> 
+      <figure class="gallery-item">Bestick
         <img class="thumbnail" src="wood.e.jpg" alt="hyvel och kniv">110 kr
       </figure>       
-      <figure class="gallery-item">Namn
+      <figure class="gallery-item">Smörknivar
         <img class="thumbnail" src="wood.f.jpg">80 kr paret
       </figure> 
-      <figure class="gallery-item">Namn
+      <figure class="gallery-item">Salladsbestick
         <img class="thumbnail" src="wood.h.jpg">200 kr
       </figure>
-      <figure class="gallery-item">Namn
+      <figure class="gallery-item">Kåsor
         <img class="thumbnail" src="wood.i.jpg">150 kr
       </figure>
-      <figure class="gallery-item">Namn
+      <figure class="gallery-item">Skärbräda - stor
         <img class="thumbnail" src="wood.j.jpg">100 kr
       </figure>
-      <figure class="gallery-item">Namn
+      <figure class="gallery-item">Underlägg
         <img class="thumbnail" src="wood.c.jpg">100 kr
       </figure>
-      <figure class="gallery-item">Namn
+      <figure class="gallery-item">Skärbräda - liten
         <img class="thumbnail" src="wood.d.jpg">100 kr
       </figure>
       </div>
@@ -49,7 +52,7 @@
       <nav>
       <ul>
         <li><a href="index.html">Kontakt</a></li>
-        <li><a href="kniv.html">Knivset</a></li>
+        <li><a href="kniv.html">KNIVAR</a></li>
         <li><a href="other.html">Övrig Slöjd</a></li>
       </ul>
       <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
