--- a/kniv.html
+++ b/kniv.html
@@ -119,7 +119,7 @@
       <nav>
       <ul>
         <li><a href="index.html">Kontakt</a></li>
-        <li><a href="kniv.html">knivset</a></li>
+        <li><a href="kniv.html">kNIVAR</a></li>
         <li><a href="other.html">Övrig Slöjd</a></li>
       </ul>
       <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
