nav text and more

--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
       <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. För mer information och beställningar kontakta Rolf.</p>
       <nav>
         <ul>
-          <li><a href="index.html">Kontakt</a></li>
+          <li><a href="index.html">KONTAKT</a></li>
           <li><a href="kniv.html">KNIVAR</a></li>
-          <li><a href="other.html">Övrig Slöjd</a></li>
+          <li><a href="other.html">SLÖJD</a></li>
         </ul>
-        <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
-        </div> -->
+        
       </nav></header>
       
         <footer>
           <div class="contactFading">
           <div class="contact">Kontakt</div>
         <div class="contact">mail: rolfhenningsson48@gmail.com</div>
-      <div class="contact">tel: 0703689995</div>
-      <div class="contact">Gör så här:</div>
+      <div class="contact">tel: 0703 689995</div>
     <ul class="contact">
     <li>Skriv namn och antal produkter du vill beställa.</li> 
     <li>Skriv önskad leveransadress</li>
