--- a/other.html
+++ b/other.html
@@ -13,9 +13,9 @@
       <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. För beställningar kontakta Rolf.</p>
       <nav>
         <ul>
-          <li><a href="index.html">Kontakt</a></li>
+          <li><a href="index.html">KONTAKT</a></li>
           <li><a href="kniv.html">KNIVAR</a></li>
-          <li><a href="other.html">Övrig Slöjd</a></li>
+          <li><a href="other.html">SLÖJD</a></li>
         </ul>
         <!-- <div class="contact-btn"><a href="index.html">Kontakt</a>
         </div> -->
@@ -24,36 +24,36 @@
     <div class="gallery">
      
       <figure class="gallery-item">Gungfår
-        <img class="thumbnail" src="gunga.jpg" alt="gungfår">1400 kr/ beställningsvara
+        <img class="thumbnail" src="media/gunga.jpg" alt="gungfår">1400 kr/ beställningsvara
       </figure> 
       <figure class="gallery-item">Bestick
-        <img class="thumbnail" src="wood.e.jpg" alt="hyvel och kniv">110 kr
+        <img class="thumbnail" src="media/wood.e.jpg" alt="hyvel och kniv">110 kr
       </figure>       
       <figure class="gallery-item">Smörknivar
-        <img class="thumbnail" src="wood.f.jpg">80 kr paret
+        <img class="thumbnail" src="media/wood.f.jpg">80 kr paret
       </figure> 
       <figure class="gallery-item">Salladsbestick
-        <img class="thumbnail" src="wood.h.jpg">200 kr
+        <img class="thumbnail" src="media/wood.h.jpg">200 kr
       </figure>
       <figure class="gallery-item">Kåsor
-        <img class="thumbnail" src="wood.i.jpg">150 kr
+        <img class="thumbnail" src="media/wood.i.jpg">150 kr
       </figure>
       <figure class="gallery-item">Skärbräda - stor
-        <img class="thumbnail" src="wood.j.jpg">100 kr
+        <img class="thumbnail" src="media/wood.j.jpg">100 kr
       </figure>
       <figure class="gallery-item">Underlägg
-        <img class="thumbnail" src="wood.c.jpg">100 kr
+        <img class="thumbnail" src="media/wood.c.jpg">100 kr
       </figure>
       <figure class="gallery-item">Skärbräda - liten
-        <img class="thumbnail" src="wood.d.jpg">100 kr
+        <img class="thumbnail" src="media/wood.d.jpg">100 kr
       </figure>
       </div>
 
       <nav>
       <ul>
-        <li><a href="index.html">Kontakt</a></li>
+        <li><a href="index.html">KONTAKT</a></li>
         <li><a href="kniv.html">KNIVAR</a></li>
-        <li><a href="other.html">Övrig Slöjd</a></li>
+        <li><a href="other.html">SLÖJD</a></li>
       </ul>
       <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
       </div> -->
