--- a/index.html
+++ b/index.html
@@ -7,31 +7,33 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
-<body class="Indexbody">
-    <header class="indexHeader">
-      <h1 class="page-title">HANTVERK</h1>
-      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. För mer information och beställningar kontakta Rolf.</p>
-      <nav>
+<body class="indexbody">
+    <header>
+      <h1 class="page-title-index">HANTVERK</h1>
+      <nav class="page-description-index">
         <ul>
           <li><a href="index.html">KONTAKT</a></li>
           <li><a href="kniv.html">KNIVAR</a></li>
           <li><a href="other.html">SLÖJD</a></li>
         </ul>
+      </nav>
+    </header>
+
+      <main class="mainbody">
+        <footer class="indexnav">
+          <div class="contact">
         
-      </nav></header>
-      
-        <footer>
-          <div class="contactFading">
-          <div class="contact">Kontakt</div>
-        <div class="contact">mail: rolfhenningsson48@gmail.com</div>
-      <div class="contact">tel: 0703 689995</div>
-    <ul class="contact">
+      <div class="contact">mail: rolfhenningsson48@gmail.com</div>
+      <div class="contact">tel: 070 36 899 95</div>
+
+  <ul class="contact">
     <li>Skriv namn och antal produkter du vill beställa.</li> 
     <li>Skriv önskad leveransadress</li>
     <li>Betala via swish när du får bekräftelse. Obs Fraktavgift tillkommer.</li>
   </ul>
   
   </div>
-        </footer>
+      </footer>
+      </main>
   </body>
 </html>
