--- a/other.html
+++ b/other.html
@@ -1,62 +1,94 @@
 <html>
+
 <head>
-    <title>Rolfs Hantverk</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="main.css">
+  <title>Rolfs Hantverk</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-    <header>
-      <h1 class="page-title">HANTVERK</h1>
-      <p class="page-description">Rolfs Hantverk är en samling av produkter i olika material till försäljning. För beställningar kontakta Rolf.</p>
-      <nav>
-        <ul>
-          <li><a href="index.html">KONTAKT</a></li>
-          <li><a href="kniv.html">KNIVAR</a></li>
-          <li><a href="other.html">SLÖJD</a></li>
-        </ul>
-        <!-- <div class="contact-btn"><a href="index.html">Kontakt</a>
-        </div> -->
-      </nav></header>
-
-    <div class="gallery">
-     
-      <figure class="gallery-item">Gungfår
-        <img class="thumbnail" src="media/gunga.jpg" alt="gungfår">1400 kr/ beställningsvara
-      </figure> 
-      <figure class="gallery-item">Bestick
-        <img class="thumbnail" src="media/wood.e.jpg" alt="hyvel och kniv">110 kr
-      </figure>       
-      <figure class="gallery-item">Smörknivar
-        <img class="thumbnail" src="media/wood.f.jpg">80 kr paret
-      </figure> 
-      <figure class="gallery-item">Salladsbestick
-        <img class="thumbnail" src="media/wood.h.jpg">200 kr
-      </figure>
-      <figure class="gallery-item">Kåsor
-        <img class="thumbnail" src="media/wood.i.jpg">150 kr
-      </figure>
-      <figure class="gallery-item">Skärbräda - stor
-        <img class="thumbnail" src="media/wood.j.jpg">100 kr
-      </figure>
-      <figure class="gallery-item">Underlägg
-        <img class="thumbnail" src="media/wood.c.jpg">100 kr
-      </figure>
-      <figure class="gallery-item">Skärbräda - liten
-        <img class="thumbnail" src="media/wood.d.jpg">100 kr
-      </figure>
-      </div>
-
-      <nav>
+  <header class="grayheader">
+    <h1 class="page-title">HANTVERK</h1>
+    <nav class="page-description-index">
       <ul>
         <li><a href="index.html">KONTAKT</a></li>
         <li><a href="kniv.html">KNIVAR</a></li>
         <li><a href="other.html">SLÖJD</a></li>
       </ul>
-      <!-- <div class="contact-btn"><a href="contact.html">Kontakt</a>
-      </div> -->
+   
     </nav>
-  </body>
+  </header>
+
+  <div class="gallery">
+
+    <figure class="gallery-item">
+      <div class="ProductTitle">
+      <h3>Gungfår</h3>
+      <img class="thumbnail" src="media/gunga.jpg" alt="gungfår">
+      <h3>1400 kr/ beställningsvara</h3>
+  </div>
+  </figure>
+  <figure class="gallery-item">
+    <div class="ProductTitle">
+    <h3>Bestick</h3>
+    <img class="thumbnail" src="media/wood.e.jpg" alt="hyvel och kniv">
+    <h3>110 kr</h3>
+    </div>
+  </figure>
+  <figure class="gallery-item">
+    <div class="ProductTitle">
+    <h3>Smörknivar</h3>
+    <img class="thumbnail" src="media/wood.f.jpg">
+    <h3>80 kr paret</h3>
+    </div>
+  </figure>
+  <figure class="gallery-item">
+    <div class="ProductTitle">
+    <h3>Salladsbestick</h3>
+    <img class="thumbnail" src="media/wood.h.jpg">
+    <h3>200 kr</h3>
+    </div>
+  </figure>
+  <figure class="gallery-item">
+    <div class="ProductTitle">
+    <h3>Kåsor</h3>
+    <img class="thumbnail" src="media/wood.i.jpg">
+    <h3>150 kr</h3>
+    </div>
+  </figure>
+  <figure class="gallery-item">
+    <div class="ProductTitle">
+    <h3>Skärbräda - stor</h3>
+    <img class="thumbnail" src="media/wood.j.jpg">
+    <h3>100 kr</h3>
+    </div>
+  </figure>
+  <figure class="gallery-item">
+    <div class="ProductTitle">
+      <h3>Underlägg</h3>
+      <img class="thumbnail" src="media/wood.c.jpg">
+      <h3>100 kr</h3>
+    </div>
+  </figure>
+  <figure class="gallery-item">
+    <div class="ProductTitle">
+      <h3>Skärbräda - liten</h3>
+      <img class="thumbnail" src="media/wood.d.jpg">
+      <h3>100 kr</h3>
+    </div>
+  </figure>
+  </div>
+
+  <!-- <nav class="nav-footer">
+    <ul>
+      <li><a href="index.html">KONTAKT</a></li>
+      <li><a href="kniv.html">KNIVAR</a></li>
+      <li><a href="other.html">SLÖJD</a></li>
+      <li><a href="#top">Upp</a></li>
+    </ul>
+  </nav> -->
+</body>
+
 </html>
