--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="contact">tel: 070 36 899 95</div>
 
   <ul class="contact">
-    <li>Skriv namn och antal produkter du vill beställa.</li> 
+    <li>Skriv namn och antal produkter du vill beställa</li> 
     <li>Skriv önskad leveransadress</li>
-    <li>Betala via swish när du får bekräftelse. Obs Fraktavgift tillkommer.</li>
+    <li>Betala via swish när du får en bekräftelse. Obs Fraktavgift tillkommer</li>
   </ul>
   
   </div>
