new content gallery items

--- a/kniv.html
+++ b/kniv.html
@@ -21,6 +21,41 @@
     </header>
 
     <div class="gallery">
+
+      <figure class="gallery-item"> 
+        <div class="ProductTitle">
+          <h3>Kökskniv i handsmitt kolstål</h3>
+        <img class="thumbnail" src="media/wooden.jpg" alt="kniv1">
+        <h3>Pris: 2400 sek</h3></div>
+      </figure>
+
+      <figure class="gallery-item"> 
+        <div class="ProductTitle">
+          <h3>Redline</h3>
+        <img class="thumbnail" src="media/redline.jpg" alt="kniv1">
+        <h3>Pris: 1900 sek</h3></div>
+      </figure>
+
+      <figure class="gallery-item"> 
+        <div class="ProductTitle">
+          <h3>Toppig</h3>
+        <img class="thumbnail" src="media/topp.jpg" alt="kniv1">
+        <h3>Pris: 1900 sek</h3></div>
+      </figure>
+
+      <figure class="gallery-item"> 
+        <div class="ProductTitle">
+          <h3>Kökskniv, japanskt blad</h3>
+        <img class="thumbnail" src="media/japan.jpg" alt="kniv1">
+        <h3>Såld</h3></div>
+      </figure>
+
+      <figure class="gallery-item"> 
+        <div class="ProductTitle">
+          <h3>Maroon</h3>
+        <img class="thumbnail" src="media/rost.jpg" alt="kniv1">
+        <h3>Pris: 1900 sek</h3></div>
+      </figure>
  
       <figure class="gallery-item"> 
         <div class="ProductTitle">
@@ -135,14 +170,5 @@
         <h3>Pris:550 sek</h3></div>
       </figure>  
       </div>
-
-      <!-- <nav class="nav-footer">
-      <ul>
-        <li><a href="index.html">KONTAKT</a></li>
-        <li><a href="kniv.html">KNIVAR</a></li>
-        <li><a href="other.html">SLÖJD</a></li>
-        <li><a href="#top">Upp</a></li>
-      </ul>
-    </nav> -->
   </body>
 </html>
