--- a/kniv.html
+++ b/kniv.html
@@ -116,8 +116,9 @@
         <div class="ProductTitle">
           <h3>Kniv 6</h3>
         <img class="thumbnail" src="media/kniv.h.jpg">
-        <h3>Pris:1600 sek</h3></div>
+        <h3>Såld</h3></div>
       </figure>
+
       <figure class="gallery-item">
         <div class="ProductTitle">
           <h3>Kniv 7</h3>
