--- a/kniv.html
+++ b/kniv.html
@@ -47,7 +47,7 @@
         <div class="ProductTitle">
           <h3>Kökskniv, japanskt blad</h3>
         <img class="thumbnail" src="media/japan.jpg" alt="kniv1">
-        <h3>Såld</h3></div>
+        <h3>Pris: 1800 sek</h3></div>
       </figure>
 
       <figure class="gallery-item"> 
