--- a/kniv.html
+++ b/kniv.html
@@ -92,11 +92,13 @@
         <img class="thumbnail" src="media/kniv.j.JPG">
         <h3>Pris:1700 sek</h3></div>
       </figure>
+
       <figure class="gallery-item">
         <div class="ProductTitle">
           <h3>Kniv 5</h3>
         <img class="thumbnail" src="media/kniv.i.jpg">
         <h3>Pris:1700 sek</h3></div>
+      </figure>
 
       <figure class="gallery-item">
         <div class="ProductTitle">
@@ -125,6 +127,7 @@
         <img class="thumbnail" src="media/kniv.d.jpg">
         <h3>Pris:1800 sek</h3></div>
       </figure>
+      
       <figure class="gallery-item">
         <div class="ProductTitle">
           <h3>Kniv 11</h3>
